@@ -2,6 +2,7 @@
 	- icesound gcc 2.95.3 compile fix (Thomas Zajic)
 	- net status support for OpenBSD (Hanspeter Roth)
 	- FreeBSD build fix (Hanspeter Roth)
+	- basename cleanups for FreeBSD
 
 1.2.15pre2: 2004-07-18
 	- Slovak translation (Radovan Stas)
